steam-devices-nitrux (0.0.1)  nitrux; urgency=medium

  * Create package.

 -- Uri Herrera <uri_herrera@nxos.org>  Sun, 30 Jan 2022 19:09:00 -0500