@@ -25,4 +25,4 @@ jobs:
         env:
           PACKAGECLOUD_TOKEN: ${{ secrets.PACKAGECLOUD_TOKEN }}
         run: |
-          package_cloud push nitrux/repo/debian/trixie files/*.deb
+          package_cloud push nitrux/testing/debian/trixie $(pwd)/*.deb
