@@ -1,16 +1,0 @@
-dist: focal
-
-before_install:
-  - gem install package_cloud
-
-script:
-  - sudo ./travis-build.sh
-  - package_cloud push nitrux/repo/debian/trixie *.deb
-
-branches:
-  only:
-    - main
-
-notifications:
-  email: false
-  
