@@ -1,10 +1,6 @@
-# Steam Devices [![Build Status](https://travis-ci.org/Nitrux/steam-devices.svg?branch=main)](https://travis-ci.org/Nitrux/steam-devices)
-
+# Steam Devices
 
 ![](https://raw.githubusercontent.com/Nitrux/luv-icon-theme/master/Luv/apps/48/steam.svg)
-
- [![Build Status](https://app.travis-ci.com/Nitrux/nx-desktop-settings.svg?branch=master)](https://app.travis-ci.com/Nitrux/nx-desktop-settings) [![Generic badge](https://img.shields.io/badge/OS-Linux-blue.svg)](https://shields.io/)
-
 
 Package to add Device support for Steam-related hardware to the distribution.
 
