@@ -2,6 +2,4 @@
 
 #   -- add uinput to load on boot
 
-sed -i -e '$auinput' /etc/modules
-
-exit 0
+printf '%s\n' auinput >> /etc/modules
