@@ -1,3 +1,9 @@
+steam-devices-nitrux (0.0.2)  nitrux; urgency=medium
+
+  * Update package.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Mon, 05 Sep 2022 02:34:00 -0500
+
 steam-devices-nitrux (0.0.1)  nitrux; urgency=medium
 
   * Create package.
